--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@
 numpy>=1.20.0
 scipy>=1.7.0
 biopython>=1.79
+pandas>=1.3.0
 
 # 可选依赖 (性能优化)
 # numba>=0.56.0
-
-# 可选依赖 (数据处理)
-# pandas>=1.3.0
 
 # 可选依赖 (可视化)
 # matplotlib>=3.5.0
