--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-# 核心依赖
+# Core dependencies
 numpy>=1.20.0
 scipy>=1.7.0
 biopython>=1.79
 pandas>=1.3.0
 
-# 可选依赖 (性能优化)
-# numba>=0.56.0
-
-# 可选依赖 (可视化)
-# matplotlib>=3.5.0
-# seaborn>=0.11.0 
+# Additional dependencies for notebooks and examples
+fuzzysearch>=0.7.0
+tqdm>=4.60.0
